kubernetes/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
        resources:
          limits:
            memory: "300Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
          name: mongo

---

apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo
  ports:
  - name: mongo-port
    port: 27017
    targetPort: 27017
