kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: fra.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: server-service
            port:
              number: 5000
